@@ -39,39 +39,29 @@ var lmsServer = Vue.component('lms-currentcover', {
                     coverUrl=resolveImage(DEFAULT_COVER);
                     this.coverFromInfo = false;
                 }
-            } else if (playerStatus.current.artwork_url!=this.artwork_url ||
-                playerStatus.current.coverid!=this.coverid ||
-                this.coverFromPlayer!=this.$store.state.player.id) {
-                this.artwork_url = playerStatus.current.artwork_url;
-                this.coverid = playerStatus.current.coverid;
-                this.coverFromPlayer = this.$store.state.player.id
-
+            } else {
                 coverUrl = undefined;
-                if (this.artwork_url) {
-                    coverUrl=resolveImage(null, this.artwork_url);
+                if (playerStatus.current.artwork_url) {
+                    coverUrl=resolveImage(null, playerStatus.current.artwork_url);
                 }
-                if (undefined==coverUrl && this.coverid) {
-                    coverUrl=lmsServerAddress+"/music/"+this.coverid+"/cover.jpg";
+                if (undefined==coverUrl && playerStatus.current.coverid) {
+                    coverUrl=lmsServerAddress+"/music/"+playerStatus.current.coverid+"/cover.jpg";
                 }
                 if (undefined==coverUrl) {
                     // Use players current cover as cover image. Need to add extra (coverid, etc) params so that
                     // the URL is different between tracks...
                     coverUrl=lmsServerAddress+"/music/current/cover.jpg?player=" + this.$store.state.player.id;
-                    if (playerStatus.current.coverid) {
-                        coverUrl+="&coverid="+playerStatus.current.coverid;
+                    if (playerStatus.current.album_id) {
+                        coverUrl+="&album_id="+playerStatus.current.album_id;
                     } else {
-                        if (playerStatus.current.album_id) {
-                            coverUrl+="&album_id="+playerStatus.current.album_id;
-                        } else {
-                            if (playerStatus.current.album) {
-                                coverUrl+="&album="+encodeURIComponent(playerStatus.current.album);
-                            }
-                            if (playerStatus.current.albumartist) {
-                                coverUrl+="&artist="+encodeURIComponent(playerStatus.current.albumartist);
-                            }
-                            if (playerStatus.current.year && playerStatus.current.year>0) {
-                                coverUrl+="&year="+playerStatus.current.year;
-                            }
+                        if (playerStatus.current.album) {
+                            coverUrl+="&album="+encodeURIComponent(playerStatus.current.album);
+                        }
+                        if (playerStatus.current.albumartist) {
+                            coverUrl+="&artist="+encodeURIComponent(playerStatus.current.albumartist);
+                        }
+                        if (playerStatus.current.year && playerStatus.current.year>0) {
+                            coverUrl+="&year="+playerStatus.current.year;
                         }
                     }
                 }
