@@ -2,6 +2,8 @@
 -----
 1. Fix add/edit alarm dialog not showing.
 2. Fix queue background cover not being drawn initially on mobile.
+3. Check for metadata, and cover, changes for current track in queue if it is a
+   radio stream (0 duration).
 
 0.2.2
 -----
